src/objects/KPIMGR_Target_Criteria__c.object
<CustomObject>
    <fields>
        <fullName>Field__c</fullName>
        <label>Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KPIMGR_Target__c</fullName>
        <label>KPI</label>
        <referenceTo>KPIMGR_User_Target__c</referenceTo>
        <relationshipLabel>KPI Criteria</relationshipLabel>
        <relationshipName>Target_Criteria</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Master_KPI_Criteria__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master KPI Criteria</label>
        <referenceTo>KPIMGR_Target_Criteria__c</referenceTo>
        <relationshipLabel>KPI Criteria</relationshipLabel>
        <relationshipName>KPI_Criteria</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Master__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Master</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operator__c</fullName>
        <label>Operator</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>KPI Criteria</label>
    <nameField>
        <displayFormat>KPIC-{00000}</displayFormat>
        <label>Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KPI Criteria</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>